<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radGPais"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radNic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radNicaragua" />

                    <RadioButton
                        android:id="@+id/radPor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radPortugal" />

                    <RadioButton
                        android:id="@+id/radSL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radSierraLeona" />

                    <RadioButton
                        android:id="@+id/radIta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radItalia" />

                    <RadioButton
                        android:id="@+id/radAle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radAlemania" />

                    <RadioButton
                        android:id="@+id/radPNG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radPapua" />

                    <RadioButton
                        android:id="@+id/radJap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radJapon" />

                    <RadioButton
                        android:id="@+id/radZim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radZimbabue" />

                    <RadioButton
                        android:id="@+id/radEti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radEtiopia" />

                    <RadioButton
                        android:id="@+id/radGeo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radGeorgia" />
                </RadioGroup>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>



