<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seleccionandoimagenes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeleccionandoImagenes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/contenedorFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">


        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRosa"
                style="@style/EstiloFlores"

                android:onClick="onClick"
                android:text="@string/btnRosa" />


            <Button
                android:id="@+id/btnMargarita"
                style="@style/EstiloFlores"

                android:onClick="onClick"
                android:text="@string/btnMargarita" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTulipan"
                style="@style/EstiloFlores"
                android:onClick="onClick"
                android:text="@string/btnTulipan" />

            <Button
                android:id="@+id/btnClavel"
                style="@style/EstiloFlores"
                android:onClick="onClick"
                android:text="@string/btnClavel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>